Add avatar / link

--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Yanick Senn</title>
 </head>
 <body>
-    <header class="row">
-        <h1>Repositories</h1>
-        <p>I'm a professional software engineer based in switzerland.</p>
+    <header class="column">
+        <article class="avatar">
+            <img src="img/avatar.png">
+        </article>
+        <article class="info">
+            <p class="description">I am a software engineer based in switzerland.</p>
+            <p class="contact">
+                <a href="mailto:info@yanicksenn.com"><span><img src="img/email.png"/> Email</span></a>
+            </p>
+            <p class="contact">
+                <a href="https://github.com/yanicksenn" target="_blank"><span><img src="img/github.png"/> GitHub</span></a>
+            </p>
+            <p class="contact">
+                <a href="https://twitter.com/yanicksenn" target="_blank"><span><img src="img/twitter.png"/> Twitter</span></a>
+            </p>
+        </article>
     </header>
     <section class="separator">
         <div class="header-separator">
@@ -21,9 +37,12 @@
         </div>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-variables">unity-variables</a></h1>
-        <p>Open source variable library allowing for quick wiring data between multiple game objects in Unity3d. </p>
-        <p><a href="https://github.com/yanicksenn/unity-variables"><span><img src="img/github.png"/> GitHub</span></a></p>
+        <h1><a href="https://github.com/yanicksenn/unity-variables" target="_blank"><span><img src="img/link.png"/> unity-variables</span></a></h1>
+        <p>Unity3d variables allow sharing data between different game elements through asset files.</p>
+    </section>
+    <section class="row">
+        <h1><a href="https://github.com/yanicksenn/unity-events" target="_blank"><span><img src="img/link.png"/> unity-events</span></a></h1>
+        <p>Unity3d events allow for invoking and listening custom events through assets files rather than code.</p>
     </section>
     <section class="separator">
         <div class="footer-separator">
@@ -35,18 +54,6 @@
         </div>
     </section>
     <footer class="column">
-        <article>
-            <h1>Contact</h1>
-            <p>
-                <a href="mailto:info@yanicksenn.com"><span><img src="img/email.png"/> Email</span></a>
-            </p>
-            <p>
-                <a href="https://github.com/yanicksenn" target="_blank"><span><img src="img/github.png"/> GitHub</span></a>
-            </p>
-            <p>
-                <a href="https://twitter.com/yanicksenn" target="_blank"><span><img src="img/twitter.png"/> Twitter</span></a>
-            </p>
-        </article>
     </footer>
 </body>
 </html>
