Add new section / formatting

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <h1><a href="https://github.com/yanicksenn/unity-events" target="_blank"><span><img src="img/link.png"/> unity-events</span></a></h1>
         <p>Unity3d events allow for invoking and listening custom events through assets files rather than code.</p>
     </section>
+    <section class="row">
+        <h1><a href="https://github.com/yanicksenn/unity-console" target="_blank"><span><img src="img/link.png"/> unity-console</span></a></h1>
+        <p>Unity3d console allowing the toggling of console output and debugging of unity events.</p>
+    </section>
     <section class="separator">
         <div class="footer-separator">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
