--- a/index.html
+++ b/index.html
@@ -10,21 +10,10 @@
     <title>Yanick Senn</title>
 </head>
 <body>
-    <header class="column">
-        <article class="avatar">
-            <img src="img/avatar.png">
-        </article>
-        <article class="info">
-            <p class="description">I am a software engineer based in switzerland.</p>
-            <p class="contact">
-                <a href="mailto:info@yanicksenn.com"><span><img src="img/email.png"/> Email</span></a>
-            </p>
-            <p class="contact">
-                <a href="https://github.com/yanicksenn" target="_blank"><span><img src="img/github.png"/> GitHub</span></a>
-            </p>
-            <p class="contact">
-                <a href="https://twitter.com/yanicksenn" target="_blank"><span><img src="img/twitter.png"/> Twitter</span></a>
-            </p>
+    <header class="row">
+        <article>
+            <h1>Yanick Senn</h1>
+            <p>I am a software engineer based in switzerland.</p>
         </article>
     </header>
     <section class="separator">
@@ -58,6 +47,15 @@
         </div>
     </section>
     <footer class="column">
+        <article class="info">
+            <h1>Contact</h1>
+            <p><a href="mailto:info@yanicksenn.com"><span><img src="img/email.png"/> Email</span></a></p>
+        </article>
+        <article class="info">
+            <h1>Socials</h1>
+            <p><a href="https://github.com/yanicksenn" target="_blank"><span><img src="img/github.png"/> GitHub</span></a></p>
+            <p><a href="https://twitter.com/yanicksenn" target="_blank"><span><img src="img/twitter.png"/> Twitter</span></a></p>
+        </article>
     </footer>
 </body>
 </html>
