--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         </div>
     </section>
     <section class="row">
+        <h1><a href="https://github.com/yanicksenn/unity-package-wizard" target="_blank"><span><img src="img/link.png"/> unity-package-wizard</span></a></h1>
+        <p>Command-line wizard to simplify the creation of unity3d packages.</p>
+    </section>
+    <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-variables" target="_blank"><span><img src="img/link.png"/> unity-variables</span></a></h1>
         <p>Unity3d variables allow sharing data between different game elements through asset files.</p>
     </section>
