--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="row">
         <article>
-            <h1>Yanick Senn</h1>
+            <h1><a href="https://github.com/yanicksenn/CV/raw/main/cv-yanicksenn-2022-en.pdf"><span><img src="img/cv.png" class="icon"/> Yanick Senn</span></a></h1>
             <p>I am a software engineer based in switzerland.</p>
         </article>
     </header>
@@ -26,19 +26,19 @@
         </div>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-package-wizard" target="_blank"><span><img src="img/link.png"/> unity-package-wizard</span></a></h1>
+        <h1><a href="https://github.com/yanicksenn/unity-package-wizard" target="_blank"><span><img src="img/link.png" class="icon"/> unity-package-wizard</span></a></h1>
         <p>Command-line wizard to simplify the creation of unity3d packages.</p>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-variables" target="_blank"><span><img src="img/link.png"/> unity-variables</span></a></h1>
+        <h1><a href="https://github.com/yanicksenn/unity-variables" target="_blank"><span><img src="img/link.png" class="icon"/> unity-variables</span></a></h1>
         <p>Unity3d variables allow sharing data between different game elements through asset files.</p>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-events" target="_blank"><span><img src="img/link.png"/> unity-events</span></a></h1>
+        <h1><a href="https://github.com/yanicksenn/unity-events" target="_blank"><span><img src="img/link.png" class="icon"/> unity-events</span></a></h1>
         <p>Unity3d events allow for invoking and listening custom events through assets files rather than code.</p>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-console" target="_blank"><span><img src="img/link.png"/> unity-console</span></a></h1>
+        <h1><a href="https://github.com/yanicksenn/unity-console" target="_blank"><span><img src="img/link.png" class="icon"/> unity-console</span></a></h1>
         <p>Unity3d console allowing the toggling of console output and debugging of unity events.</p>
     </section>
     <section class="separator">
@@ -53,12 +53,12 @@
     <footer class="column">
         <article class="info">
             <h1>Contact</h1>
-            <p><a href="mailto:info@yanicksenn.com"><span><img src="img/email.png"/> Email</span></a></p>
+            <p><a href="mailto:info@yanicksenn.com"><span><img src="img/email.png" class="icon"/> Email</span></a></p>
         </article>
         <article class="info">
             <h1>Socials</h1>
-            <p><a href="https://github.com/yanicksenn" target="_blank"><span><img src="img/github.png"/> GitHub</span></a></p>
-            <p><a href="https://twitter.com/yanicksenn" target="_blank"><span><img src="img/twitter.png"/> Twitter</span></a></p>
+            <p><a href="https://github.com/yanicksenn" target="_blank"><span><img src="img/github.png" class="icon"/> GitHub</span></a></p>
+            <p><a href="https://twitter.com/yanicksenn" target="_blank"><span><img src="img/twitter.png" class="icon"/> Twitter</span></a></p>
         </article>
     </footer>
 </body>
