--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="row">
         <article>
-            <h1><a href="https://github.com/yanicksenn/CV/raw/main/cv-yanicksenn-2022-en.pdf"><span><img src="img/cv.png" class="icon"/> Yanick Senn</span></a></h1>
+            <h1><a href="https://github.com/yanicksenn/CV/raw/main/cv-yanicksenn-2022-en.pdf" target="_blank"><span><img src="img/cv.png" class="icon"/> Yanick Senn</span></a></h1>
             <p>I am a software engineer based in switzerland.</p>
         </article>
     </header>
