--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     <footer class="column">
         <article class="info">
             <h1>Contact</h1>
-            <p><a href="mailto:info@yanicksenn.com"><span><img src="img/email.png" class="icon"/> Email</span></a></p>
+            <p><a href="mailto:info@yanicksenn.com" target="_blank"><span><img src="img/email.png" class="icon"/> Email</span></a></p>
+            <p><a href="https://github.com/yanicksenn/CV/raw/main/cv-yanicksenn-2022-en.pdf" target="_blank"><span><img src="img/cv.png" class="icon"/> CV</span></a></p>
         </article>
         <article class="info">
             <h1>Socials</h1>
