--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/art.css">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -11,10 +12,8 @@
 </head>
 <body>
     <header class="row">
-        <article>
-            <h1><a href="https://github.com/yanicksenn/CV/raw/main/cv-yanicksenn-2022-en.pdf" target="_blank"><span><img src="img/cv.png" class="icon"/> Yanick Senn</span></a></h1>
-            <p>I am a software engineer based in switzerland.</p>
-        </article>
+        <h1><a href="https://github.com/yanicksenn/CV/blob/main/cv-yanicksenn-2022-en.pdf" target="_blank"><span><img src="img/cv.png" class="link-icon"/> Yanick Senn</span></a></h1>
+        <p>I am a software engineer based in switzerland.</p>
     </header>
     <section class="separator">
         <div class="header-separator">
@@ -26,20 +25,29 @@
         </div>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-package-wizard" target="_blank"><span><img src="img/link.png" class="icon"/> unity-package-wizard</span></a></h1>
+        <h1><a href="https://github.com/yanicksenn/unity-package-wizard" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-package-wizard</span></a></h1>
         <p>Command-line wizard to simplify the creation of unity3d packages.</p>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-variables" target="_blank"><span><img src="img/link.png" class="icon"/> unity-variables</span></a></h1>
+        <h1><a href="https://github.com/yanicksenn/unity-variables" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-variables</span></a></h1>
         <p>Unity3d variables allow sharing data between different game elements through asset files.</p>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-events" target="_blank"><span><img src="img/link.png" class="icon"/> unity-events</span></a></h1>
+        <h1><a href="https://github.com/yanicksenn/unity-events" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-events</span></a></h1>
         <p>Unity3d events allow for invoking and listening custom events through assets files rather than code.</p>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-console" target="_blank"><span><img src="img/link.png" class="icon"/> unity-console</span></a></h1>
+        <h1><a href="https://github.com/yanicksenn/unity-console" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-console</span></a></h1>
         <p>Unity3d console allowing the toggling of console output and debugging of unity events.</p>
+    </section>
+    <section class="row">
+        <h1><a href="https://github.com/yanicksenn/jupyter-notebook-kotlin" target="_blank"><span><img src="img/link.png" class="link-icon"/> Jupyter Notebook Kotlin</span></a></h1>
+        <p>A straight forward addition of the kotlin-kernel to the minimal-notebook from juypter.</p>
+        <code><pre>docker run -it \
+    -p 8888:8888 \
+    -v ~/work:/home/jovyan/work \
+    --name jupyter-notebook \
+    yanicksenn/jupyter-notebook-kotlin</pre></code>
     </section>
     <section class="separator">
         <div class="footer-separator">
@@ -53,13 +61,13 @@
     <footer class="column">
         <article class="info">
             <h1>Contact</h1>
-            <p><a href="mailto:info@yanicksenn.com" target="_blank"><span><img src="img/email.png" class="icon"/> Email</span></a></p>
-            <p><a href="https://github.com/yanicksenn/CV/raw/main/cv-yanicksenn-2022-en.pdf" target="_blank"><span><img src="img/cv.png" class="icon"/> CV</span></a></p>
+            <p><a href="mailto:info@yanicksenn.com" target="_blank"><span><img src="img/email.png" class="link-icon"/> Email</span></a></p>
+            <p><a href="https://github.com/yanicksenn/CV/blob/main/cv-yanicksenn-2022-en.pdf" target="_blank"><span><img src="img/cv.png" class="link-icon"/> CV</span></a></p>
         </article>
         <article class="info">
             <h1>Socials</h1>
-            <p><a href="https://github.com/yanicksenn" target="_blank"><span><img src="img/github.png" class="icon"/> GitHub</span></a></p>
-            <p><a href="https://twitter.com/yanicksenn" target="_blank"><span><img src="img/twitter.png" class="icon"/> Twitter</span></a></p>
+            <p><a href="https://github.com/yanicksenn" target="_blank"><span><img src="img/github.png" class="link-icon"/> GitHub</span></a></p>
+            <p><a href="https://twitter.com/yanicksenn" target="_blank"><span><img src="img/twitter.png" class="link-icon"/> Twitter</span></a></p>
         </article>
     </footer>
 </body>
