--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>Unity3d console allowing the toggling of console output and debugging of unity events.</p>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/jupyter-notebook-kotlin" target="_blank"><span><img src="img/link.png" class="link-icon"/> Jupyter Notebook Kotlin</span></a></h1>
+        <h1><a href="https://github.com/yanicksenn/jupyter-notebook-with-kotlin" target="_blank"><span><img src="img/link.png" class="link-icon"/> jupyter-notebook-with-kotlin</span></a></h1>
         <p>A straight forward addition of the kotlin-kernel to the minimal-notebook from juypter.</p>
         <code><pre>docker run -it \
     -p 8888:8888 \
