Update descriptions / add unity-groups

--- a/index.html
+++ b/index.html
@@ -30,19 +30,23 @@
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-variables" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-variables</span></a></h1>
-        <p>Unity3d variables allow sharing data between different game elements through asset files.</p>
+        <p>Unity3d variables allowing the sharing of data between different game elements through ScriptableObjects.</p>
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-events" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-events</span></a></h1>
-        <p>Unity3d events allow for invoking and listening custom events through assets files rather than code.</p>
+        <p>Unity3d events allowing the invocation and interpretation of custom events through ScriptableObjects.</p>
+    </section>
+    <section class="row">
+        <h1><a href="https://github.com/yanicksenn/unity-groups" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-groups</span></a></h1>
+        <p>Unity3d groups allowing for the grouping and categorization of GameObjects.</p>
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-console" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-console</span></a></h1>
-        <p>Unity3d console allowing the toggling of console output and debugging of unity events.</p>
+        <p>Unity3d console allowing the toggling of console output and debugging of UnityEvents.</p>
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/jupyter-notebook-with-kotlin" target="_blank"><span><img src="img/link.png" class="link-icon"/> jupyter-notebook-with-kotlin</span></a></h1>
-        <p>A straight forward addition of the kotlin-kernel to the minimal-notebook from juypter.</p>
+        <p>A straightforward addition of the kotlin-kernel to the minimal-notebook from juypter.</p>
         <code><pre>docker run -it \
     -p 8888:8888 \
     -v ~/work:/home/jovyan/work \
