--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-package-wizard" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-package-wizard</span></a></h1>
-        <p>Command-line wizard to simplify the creation of unity3d packages.</p>
+        <p>Command-line wizard to simplify the creation of unity packages.</p>
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-variables" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-variables</span></a></h1>
-        <p>Unity3d variables allowing the sharing of data between different game elements through ScriptableObjects.</p>
+        <p>Unity3d package allowing the invocation and interpretation of custom events through ScriptableObjects.</p>
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-events" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-events</span></a></h1>
@@ -38,11 +38,15 @@
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-groups" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-groups</span></a></h1>
-        <p>Unity3d groups allowing for the grouping and categorization of GameObjects.</p>
+        <p>Unity3d package allowing the grouping and categorization of GameObjects.</p>
+    </section>
+    <section class="row">
+        <h1><a href="https://github.com/yanicksenn/unity-pools" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-pools</span></a></h1>
+        <p>Unity3d package allowing to pool frequently used GameObjects.</p>
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-console" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-console</span></a></h1>
-        <p>Unity3d console allowing the toggling of console output and debugging of UnityEvents.</p>
+        <p>Unity3d package allowing the toggling of console output and debugging of UnityEvents.</p>
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/jupyter-notebook-with-kotlin" target="_blank"><span><img src="img/link.png" class="link-icon"/> jupyter-notebook-with-kotlin</span></a></h1>
