Add link to lectures

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
     --name jupyter-notebook \
     yanicksenn/jupyter-notebook-kotlin</pre></code>
     </section>
+    <section class="row">
+        <h1><a href="https://github.com/yanicksenn/lectures" target="_blank"><span><img src="img/link.png" class="link-icon"/> lectures</span></a></h1>
+        <p>A collection of slides of lecture that I attended or wanted to attend during my studies (incl. grades).</p>
+    </section>
     <section class="separator">
         <div class="footer-separator">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
