--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="row">
         <h1><a href="https://github.com/yanicksenn/CV/blob/main/cv-yanicksenn-2022-en.pdf" target="_blank"><span><img src="img/cv.png" class="link-icon"/> Yanick Senn</span></a></h1>
-        <p>I am a software engineer based in switzerland.</p>
+        <p>I am a software engineer who likes to engineer software.</p>
     </header>
     <section class="separator">
         <div class="header-separator">
