--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         </div>
     </section>
     <section class="row">
+        <h1><a href="https://github.com/yanicksenn/workstation-setup" target="_blank"><span><img src="img/link.png" class="link-icon"/> macOS workstation setup</span></a></h1>
+        <p>Installation script to prepare a macOS workstation for myself.</p>
+        <code><pre>/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/yanicksenn/setup/main/macOS/setup.sh)"</pre></code>
+    </section>
+    <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-package-wizard" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-package-wizard</span></a></h1>
         <p>Command-line wizard to simplify the creation of unity packages.</p>
     </section>
