Add section for ssh-keygen-seeded

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <code><pre>/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/yanicksenn/setup/main/macOS/install.sh)"</pre></code>
     </section>
     <section class="row">
+        <h1><a href="https://github.com/yanicksenn/ssh-keygen-seeded" target="_blank"><span><img src="img/link.png" class="link-icon"/> ssh-keygen-seeded</span></a></h1>
+        <p>Small tool to generate seeded ssh keypairs.</p>
+    </section>
+    <section class="row">
         <h1><a href="https://github.com/yanicksenn/unity-package-wizard" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-package-wizard</span></a></h1>
         <p>Command-line wizard to simplify the creation of unity packages.</p>
     </section>
