--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <code><pre>/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/yanicksenn/macOS-workstation-setup/main/macOS/install.sh)"</pre></code>
     </section>
     <section class="row">
+        <h1><a href="https://www.yanicksenn.com/ghostballs/web-export" target="_blank"><span><img src="img/link.png" class="link-icon"/> GGJ 2024 Submission</span></a></h1>
+        <p>Global Game Jam 2024 submission - created by Christian, Valentin, Yanick and Yue.</p>
+    </section>
+    <section class="row">
         <h1><a href="https://github.com/yanicksenn/ssh-keygen-seeded" target="_blank"><span><img src="img/link.png" class="link-icon"/> ssh-keygen-seeded</span></a></h1>
         <p>Small tool to generate seeded ssh keypairs.</p>
     </section>
