Update personal info page

--- a/index.html
+++ b/index.html
@@ -25,41 +25,16 @@
         </div>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/macOS-workstation-setup" target="_blank"><span><img src="img/link.png" class="link-icon"/> macOS workstation setup</span></a></h1>
-        <p>Installation script to prepare a macOS workstation for myself.</p>
-        <code><pre>/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/yanicksenn/macOS-workstation-setup/main/macOS/install.sh)"</pre></code>
-    </section>
-    <section class="row">
         <h1><a href="https://www.yanicksenn.com/ghostballs/web-export" target="_blank"><span><img src="img/link.png" class="link-icon"/> GGJ 2024 Submission</span></a></h1>
         <p>Global Game Jam 2024 submission - created by Christian, Valentin, Yanick and Yue.</p>
     </section>
     <section class="row">
+        <h1><a href="https://www.yanicksenn.com/BlackFlea/Web" target="_blank"><span><img src="img/link.png" class="link-icon"/> Black Flea</span></a></h1>
+        <p>Black flea is my take on the classic "Space Invaders" arcade video game from 1978. My goal was to create a complete video game within a day. See the source <a href="https://github.com/yanicksenn/BlackFlea">here</a>.</p>
+    </section>
+    <section class="row">
         <h1><a href="https://github.com/yanicksenn/ssh-keygen-seeded" target="_blank"><span><img src="img/link.png" class="link-icon"/> ssh-keygen-seeded</span></a></h1>
         <p>Small tool to generate seeded ssh keypairs.</p>
-    </section>
-    <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-package-wizard" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-package-wizard</span></a></h1>
-        <p>Command-line wizard to simplify the creation of unity packages.</p>
-    </section>
-    <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-variables" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-variables</span></a></h1>
-        <p>Unity3d package allowing the invocation and interpretation of custom events through ScriptableObjects.</p>
-    </section>
-    <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-events" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-events</span></a></h1>
-        <p>Unity3d events allowing the invocation and interpretation of custom events through ScriptableObjects.</p>
-    </section>
-    <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-groups" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-groups</span></a></h1>
-        <p>Unity3d package allowing the grouping and categorization of GameObjects.</p>
-    </section>
-    <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-pools" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-pools</span></a></h1>
-        <p>Unity3d package allowing to pool frequently used GameObjects.</p>
-    </section>
-    <section class="row">
-        <h1><a href="https://github.com/yanicksenn/unity-console" target="_blank"><span><img src="img/link.png" class="link-icon"/> unity-console</span></a></h1>
-        <p>Unity3d package allowing the toggling of console output and debugging of UnityEvents.</p>
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/jupyter-notebook-with-kotlin" target="_blank"><span><img src="img/link.png" class="link-icon"/> jupyter-notebook-with-kotlin</span></a></h1>
@@ -72,7 +47,7 @@
     </section>
     <section class="row">
         <h1><a href="https://github.com/yanicksenn/lectures" target="_blank"><span><img src="img/link.png" class="link-icon"/> lectures</span></a></h1>
-        <p>A collection of slides of lecture that I attended or wanted to attend during my studies (incl. grades).</p>
+        <p>A collection of slides of lecture that I attended or wanted to attend during my studies.</p>
     </section>
     <section class="separator">
         <div class="footer-separator">
@@ -87,12 +62,10 @@
         <article class="info">
             <h1>Contact</h1>
             <p><a href="mailto:info@yanicksenn.com" target="_blank"><span><img src="img/email.png" class="link-icon"/> Email</span></a></p>
-            <p><a href="https://github.com/yanicksenn/CV/blob/main/cv-yanicksenn-2022-en.pdf" target="_blank"><span><img src="img/cv.png" class="link-icon"/> CV</span></a></p>
         </article>
         <article class="info">
             <h1>Socials</h1>
             <p><a href="https://github.com/yanicksenn" target="_blank"><span><img src="img/github.png" class="link-icon"/> GitHub</span></a></p>
-            <p><a href="https://twitter.com/yanicksenn" target="_blank"><span><img src="img/twitter.png" class="link-icon"/> Twitter</span></a></p>
         </article>
     </footer>
 </body>
