--- a/index.html
+++ b/index.html
@@ -33,21 +33,8 @@
         <p>Black flea is my take on the classic "Space Invaders" arcade video game from 1978. My goal was to create a complete video game within a day. See the source <a href="https://github.com/yanicksenn/BlackFlea">here</a>.</p>
     </section>
     <section class="row">
-        <h1><a href="https://github.com/yanicksenn/ssh-keygen-seeded" target="_blank"><span><img src="img/link.png" class="link-icon"/> ssh-keygen-seeded</span></a></h1>
-        <p>Small tool to generate seeded ssh keypairs.</p>
-    </section>
-    <section class="row">
-        <h1><a href="https://github.com/yanicksenn/jupyter-notebook-with-kotlin" target="_blank"><span><img src="img/link.png" class="link-icon"/> jupyter-notebook-with-kotlin</span></a></h1>
-        <p>A straightforward addition of the kotlin-kernel to the minimal-notebook from juypter.</p>
-        <code><pre>docker run -it \
-    -p 8888:8888 \
-    -v ~/work:/home/jovyan/work \
-    --name jupyter-notebook \
-    yanicksenn/jupyter-notebook-kotlin</pre></code>
-    </section>
-    <section class="row">
         <h1><a href="https://github.com/yanicksenn/lectures" target="_blank"><span><img src="img/link.png" class="link-icon"/> lectures</span></a></h1>
-        <p>A collection of slides of lecture that I attended or wanted to attend during my studies.</p>
+        <p>The slides of the lectures I attended during my studies.</p>
     </section>
     <section class="separator">
         <div class="footer-separator">
